--- a/gantt/virtualscroll/index.html
+++ b/gantt/virtualscroll/index.html
@@ -1,81 +1,46 @@
-<!DOCTYPE html><html lang="en"><head>
-    <title>EJ2 TreeGrid</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Typescript Grid Control">
-    <meta name="author" content="Syncfusion">
-    <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
-    <link href="css/base-bootstrap5.css" rel="stylesheet">
-	<link href="css/buttons-bootstrap5.css" rel="stylesheet">
-    <link href="css/navigations-bootstrap5.css" rel="stylesheet">
-    <link href="css/dropdown-bootstrap5.css" rel="stylesheet">
-    <link href="css/inputs-bootstrap5.css" rel="stylesheet">
-    <link href="css/calendar-bootstrap5.css" rel="stylesheet">
-    <link href="css/grids-bootstrap5.css" rel="stylesheet">
-	 <link href="css/popup-bootstrap5.css" rel="stylesheet">
-    <link href="css/treegrid-bootstrap5.css" rel="stylesheet">
-    <link href="css/gantt-bootstrap5.css" rel="stylesheet">
-    <link href="css/layouts-bootstrap5.css" rel="stylesheet">
-    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
-<script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
-<script src="script/es5-data.js" type="text/javascript"></script>
-<style>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Home Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Typescript Grid Control">
+  <meta name="author" content="Syncfusion">
+  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
+  <link href="css/base-bootstrap5.css" rel="stylesheet">
+  <link href="css/buttons-bootstrap5.css" rel="stylesheet">
+  <link href="css/navigations-bootstrap5.css" rel="stylesheet">
+  <link href="css/dropdown-bootstrap5.css" rel="stylesheet">
+  <link href="css/inputs-bootstrap5.css" rel="stylesheet">
+  <link href="css/calendar-bootstrap5.css" rel="stylesheet">
+  <link href="css/grids-bootstrap5.css" rel="stylesheet">
+  <link href="css/popup-bootstrap5.css" rel="stylesheet">
+  <link href="css/treegrid-bootstrap5.css" rel="stylesheet">
+  <link href="css/gantt-bootstrap5.css" rel="stylesheet">
+  <link href="css/layouts-bootstrap5.css" rel="stylesheet">
+  <link href="css/lists-bootstrap5.css" rel="stylesheet">
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
+  <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
+  <script src="script/es5-data.js" type="text/javascript"></script>
+  <style>
     body {
-        touch-action: none;
+      touch-action: none;
     }
-
-    #Editing {
-        display: none;
-    }
-</style>
+  </style>
+  </style>
 </head>
-<body>
-        <div id="TreeGrid"></div>
-        <br/><br/>
-        <div id="Kanban"></div>
-        <br/><br/>
-        <div id="Editing">
-          <div style="float: right; margin: 10px;">Source:
-              <a href="https://en.wikipedia.org/wiki/Construction" target="_blank">https://en.wikipedia.org/</a>
-          </div>
-      </div>   
-      
-      <script id="cardTemplate" type="text/x-jsrender">
-        <div class='card-template'>
-        <table style="width:100%">
-        <tr>
-          <td><b>Task ID</b></td>
-          <td>:${TaskID}</td>
-        </tr>
-        <tr>
-        <td><b>TaskName</b></td>
-        <td>:${TaskName}</td>
-      </tr>
-    <tr>
-    <td><b>Duration</b></td>
-    <td>:${Duration}</td>
-  </tr>
-  <tr>
-  <td><b>StartDate</b></td>
-  <td>:${StartDate}</td>
-</tr>
-<tr>
-<td><b>EndDate</b></td>
-<td>:${EndDate}</td>
-</tr>
-<tr>
-<td><b>Progress</b></td>
-<td>:${Progress}</td>
-</tr>
-  <tr>
-  <td><b>ParentID</b></td>
-  <td>:${parentID}</td>
-</tr>
-      </table>
-        </div>
-</script>
 
-<script>   
-</script>
-<script src="script/index.js" type="text/javascript"></script>
-</body></html>
+<body>
+  <button id="element1">Go to Gantt</button>
+  <button id="element2">Go to Kanban</button>
+  <button id="element3">Go to Treegrid</button>
+  <br /><br /><br /><br />
+  <div id="gantt">
+  </div>
+  <script>
+  </script>
+  <script src="script/index.js" type="text/javascript"></script>
+</body>
+
+</html>
