--- a/gantt/virtualscroll/index.html
+++ b/gantt/virtualscroll/index.html
@@ -1,46 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <title>Home Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Typescript Grid Control">
-  <meta name="author" content="Syncfusion">
-  <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
-  <link href="css/base-bootstrap5.css" rel="stylesheet">
-  <link href="css/buttons-bootstrap5.css" rel="stylesheet">
-  <link href="css/navigations-bootstrap5.css" rel="stylesheet">
-  <link href="css/dropdown-bootstrap5.css" rel="stylesheet">
-  <link href="css/inputs-bootstrap5.css" rel="stylesheet">
-  <link href="css/calendar-bootstrap5.css" rel="stylesheet">
-  <link href="css/grids-bootstrap5.css" rel="stylesheet">
-  <link href="css/popup-bootstrap5.css" rel="stylesheet">
-  <link href="css/treegrid-bootstrap5.css" rel="stylesheet">
-  <link href="css/gantt-bootstrap5.css" rel="stylesheet">
-  <link href="css/layouts-bootstrap5.css" rel="stylesheet">
-  <link href="css/lists-bootstrap5.css" rel="stylesheet">
-  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
-  <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
-  <script src="script/es5-data.js" type="text/javascript"></script>
-  <style>
-    body {
-      touch-action: none;
-    }
-  </style>
-  </style>
+    <title>Home Page</title>
+    <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
+    <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
 </head>
 
 <body>
-  <button id="element1">Go to Gantt</button>
-  <button id="element2">Go to Kanban</button>
-  <button id="element3">Go to Treegrid</button>
-  <br /><br /><br /><br />
-  <div id="gantt">
-  </div>
-  <script>
-  </script>
-  <script src="script/index.js" type="text/javascript"></script>
+    <h1>Home Page</h1>
+                    <div id="Kanban"></div>
+        <script>
+            var projectsData = [
+                {
+                    ProjectId: 1,
+                    ProjectName: 'Project 1',
+                    StartDate: new Date('03/25/2019'),
+                    EndDate: new Date('12/28/2019'),
+                    Status: 'Open'
+                },
+            ];
+            var kanbanObj = new ej.kanban.Kanban({
+                dataSource: projectsData,
+                keyField: 'Status',
+                columns: [
+                    { headerText: 'To Do', keyField: 'Open' }
+                ],
+                cardSettings: {
+                    contentField: 'ProjectName',
+                    headerField: 'ProjectId',
+                    template: '#cardTemplate',
+                },
+                cardClick: function () {
+                    window.open("./gantt.html");
+                }
+            });
+            //Render initialized Kanban control
+            kanbanObj.appendTo('#Kanban');
+
+        </script>
+        <script id="cardTemplate" type="text/x-jsrender">
+            <div class='card-template'>
+            <table style="width:100%">
+                <tr>
+                    <td><b>ProjectId</b></td>
+                    <td>:${ProjectId}</td>
+                  </tr>
+                  <tr>
+                    <td><b>ProjectName</b></td>
+                    <td>:${ProjectName}</td>
+                  </tr>
+              <tr>
+      <td><b>StartDate</b></td>
+      <td>:${StartDate}</td>
+    </tr>
+    <tr>
+    <td><b>EndDate</b></td>
+    <td>:${EndDate}</td>
+    </tr>
+          </table>
+            </div>
+    </script>
 </body>
 
 </html>
